--- a/style.css
+++ b/style.css
@@ -100,3 +100,10 @@ background:rgba(255, 192, 203,0.5);
 clear: both;
 
 }
+
+.smieszne {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 200px;
+}
