--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
 background-image: url("https://wallpaperaccess.com/full/45056.jpg");
   background-size: 100% auto;
+	background-repeat: no-repeat;
 }
 
 @font-face {
