--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
 background-image: url("https://wallpaperaccess.com/full/45056.jpg");
   background-size: 100% auto;
 	background-repeat: no-repeat;
+	background-color: black;
 }
 
 @font-face {
